<?xml version="1.0"?>
<package>
  <name>vrep_holonomic_navigation</name>
  <version>0.0.1</version>
  <description>navigation package</description>
  <license>TODO</license>

  <maintainer email="lim.yonsei@gmail.com">Jaehyun Lim</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>vrep_holonomic_bringup</run_depend>
  <run_depend>vrep_holonomic_description</run_depend>
  
  <test_depend>roslaunch</test_depend>

</package>
