<?xml version="1.0"?>
<package>
  <name>vrep_holonomic_slam</name>
  <version>0.0.1</version>
  <description>slam package</description>
  <license>TODO</license>

  <author email="seungchul0406@gmail.com">Seungchul Ha</author>

  <maintainer email="seungchul0406@gmail.com">Seungchul Ha</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>vrep_holonomic_bringup</run_depend>
  <run_depend>vrep_holonomic_description</run_depend>
  
  <test_depend>roslaunch</test_depend>

</package>
